Implement file upload

--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,10 @@
 
 <body>
     <p>HELLO!</p>
+    <form enctype="multipart/form-data" action="http://localhost:9001/upload/13" method="post">
+        <input type="file" name="fileUpload" />
+        <input type="submit" value="upload" />
+    </form>
 </body>
 
 </html>
