Add frontend to be served from the server

--- a/static/index.html
+++ b/static/index.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
-    <p>HELLO!</p>
-    <form enctype="multipart/form-data" action="http://localhost:9001/upload/13" method="post">
-        <input type="file" name="fileUpload" />
-        <input type="submit" value="upload" />
-    </form>
-</body>
-
+  <head>
+    <meta charset="utf-8" />
+    <title>PsyCare</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="stylesheet" href="styles.76e2efcfcf1f3d468a4c.css"></head>
+  <body>
+    <app-root></app-root>
+  <script src="runtime-es2015.c5fa8325f89fc516600b.js" type="module"></script><script src="runtime-es5.c5fa8325f89fc516600b.js" nomodule defer></script><script src="polyfills-es5.3e8196928d184a6e5319.js" nomodule defer></script><script src="polyfills-es2015.5b10b8fd823b6392f1fd.js" type="module"></script><script src="main-es2015.3c2ca9c7fb63851c70db.js" type="module"></script><script src="main-es5.3c2ca9c7fb63851c70db.js" nomodule defer></script></body>
 </html>
