Add new frontend

--- a/static/index.html
+++ b/static/index.html
@@ -6,8 +6,10 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  <link rel="stylesheet" href="styles.76e2efcfcf1f3d468a4c.css"></head>
+      <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="styles.ce120fbbfcec889d5797.css"></head>
   <body>
     <app-root></app-root>
-  <script src="runtime-es2015.c5fa8325f89fc516600b.js" type="module"></script><script src="runtime-es5.c5fa8325f89fc516600b.js" nomodule defer></script><script src="polyfills-es5.3e8196928d184a6e5319.js" nomodule defer></script><script src="polyfills-es2015.5b10b8fd823b6392f1fd.js" type="module"></script><script src="main-es2015.3c2ca9c7fb63851c70db.js" type="module"></script><script src="main-es5.3c2ca9c7fb63851c70db.js" nomodule defer></script></body>
+  <script src="runtime-es2015.c5fa8325f89fc516600b.js" type="module"></script><script src="runtime-es5.c5fa8325f89fc516600b.js" nomodule defer></script><script src="polyfills-es5.df82b5641d786e2e0af8.js" nomodule defer></script><script src="polyfills-es2015.ecdb8d674ad1ef3047ff.js" type="module"></script><script src="main-es2015.7edb23a1e4ea08ed23a6.js" type="module"></script><script src="main-es5.7edb23a1e4ea08ed23a6.js" nomodule defer></script></body>
 </html>
